--- a/styles/style.css
+++ b/styles/style.css
@@ -1,70 +1,26 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 10px;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-    line-height: 1;
-    background-color: #444;
-    color: #eee;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/***************************************************************
+/***********************************************************************************
+/ Grundeinstellunen meiner Seite
 /
-/ Titel Header
-/
-/**************************************************************/
-header{
-    border: 2px solid yellow; /*Test*/
+/ Erstellt: 31.1.2018 Author: Schmid Lothar
+/***********************************************************************************/
+
+*{
+	box-sizing: border-box;
 }
-header div img{
-    border: 2px solid yellowgreen; /*Test*/
-    width: 3rem;
-    height: auto;
+html, body{	
+	background-color: #444;
+	color: #eee;
+	font-size:10px;
 }
-header div h1{
-    color: orange;
-    font-size: 3rem;
+h1, h2, h3, h4{	
+	color: rgb(255,205, 127);
+	font-family: sans-serif;
 }
-header nav{
-    border: 2px solid blanchedalmond; /*Test*/
+h3{
+	font-size: 1.2rem;
+}
+
+a{
+	text-decoration: none;
 }
