--- a/styles/viewStyles/index.css
+++ b/styles/viewStyles/index.css
@@ -2,10 +2,15 @@ main{
     display: grid;
     grid-gap: 0.5rem;
     grid-template-columns: 1fr 1fr;
+    width: 98%;
+    margin: auto;
 }
 
-main article{
-    border: solid 2px yellow;
+main article{    
+    color: black;
+    background-color: #eee;
+    box-shadow: 0 0.3rem 0.2rem rgba(255,255,255,0.4), 0.2rem 0 0 rgba(255,255,255,255,.3);
+    border-radius: .5rem;
     
 }
 article .titel{
@@ -19,7 +24,12 @@ article .titel {
 article .titel a h2{    
     font-size: 1.5rem;
 }
+article .titel a:hover{
+    display: block;
+}
 article p{
     font-size: 1.3rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: .3rem;
+    display:none;
 }
