--- a/styles/viewStyles/index.css
+++ b/styles/viewStyles/index.css
@@ -10,24 +10,23 @@ main article{
     color: black;
     background-color: #eee;
     box-shadow: 0 0.3rem 0.2rem rgba(255,255,255,0.4), 0.2rem 0 0 rgba(255,255,255,255,.3);
-    border-radius: .5rem;
-    
+    border-radius: .5rem;    
 }
-article .titel{
+.titel{
     text-align: center;
 }
-article .titel {
+.titel {
     margin: 0.5rem;
     padding: 0.5rem;
     background-color: #666;
 }
-article .titel a h2{    
+.titel a h2{    
     font-size: 1.5rem;
 }
-article .titel a:hover{
+.titel a:hover .txt {
     display: block;
 }
-article p{
+.txt{
     font-size: 1.3rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: .3rem;
