--- a/styles/header.css
+++ b/styles/header.css
@@ -41,7 +41,7 @@ header nav a{
     margin: 0.5rem;
     padding: 0.6rem;
     font-size: 1.4rem;
-    color: greenyellow;
+    color: rgb(49, 49, 45);
     box-shadow: 0 0.1rem 0.3rem rgba(255, 255, 255, 1),
                 0.1rem 0 0 rgba(255, 255, 255, 1);
 }
