--- a/styles/style.css
+++ b/styles/style.css
@@ -9,18 +9,17 @@
 	box-sizing: border-box;
 }
 html, body{	
-	background-color: #444;
-	color: #eee;
+	background-color: #eee;
+	color: #444;
 	font-size:10px;
 }
 h1, h2, h3, h4{	
-	color: rgb(255,205, 127);
+	color: rgb(245, 170, 8);
 	font-family: sans-serif;
 }
-h3{
-	font-size: 1.2rem;
-}
-
 a{
 	text-decoration: none;
+}
+p{
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
