--- a/styles/viewStyles/index.css
+++ b/styles/viewStyles/index.css
@@ -1,34 +1,34 @@
 main{
     display: grid;
-    grid-gap: 0.5rem;
-    grid-template-columns: 1fr 1fr;
-    width: 98%;
-    margin: auto;
+    grid-gap: 0.8rem;
+    grid-template-columns: 1fr;
+    width: 97%;
+    margin: 0.5rem auto 0.5rem auto;
 }
 
-main article{    
+.art{    
     color: black;
     background-color: #eee;
-    box-shadow: 0 0.3rem 0.2rem rgba(255,255,255,0.4), 0.2rem 0 0 rgba(255,255,255,255,.3);
-    border-radius: .5rem;    
+    box-shadow: 0 0.3rem 0.2rem rgba(0,0,0,0.4), 0.2rem 0 0 rgba(0,0,0,0.3);
+    border-radius: .1rem;    
 }
-.titel{
-    text-align: center;
-}
+
 .titel {
     margin: 0.5rem;
     padding: 0.5rem;
     background-color: #666;
+    text-align: center;
 }
-.titel a h2{    
-    font-size: 1.5rem;
+.art a h2{    
+    font-size: 1.8rem;
 }
-.titel a:hover .txt {
-    display: block;
+.art a:focus+.txt{
+    /*visibility: visible; */
+    display: block;    
 }
 .txt{
-    font-size: 1.3rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.3rem;    
     padding: .3rem;
-    display:none;
+    /*visibility: hidden;*/
+    display: none;
 }
