--- a/styles/header.css
+++ b/styles/header.css
@@ -7,45 +7,21 @@
 /**************************************************************/
 header{
     /*border: 2px solid yellow; Test*/
-    display: grid;
-    grid-template: "titel titel"
-                   "menue menue"
+    background-color: #000033;
+    border-bottom-right-radius: 4rem;
+    box-shadow: 0.3rem 0.3rem 1rem 0 rgb(192, 165, 46);
+    margin: 0.6rem 0.6rem;
 }
-header div{
-    grid-area: titel;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 0.6rem 0 0;
-    text-align: center;
+header div{   
+    padding: 0.4rem;
+    text-align: center;   
+    line-height: 3rem;
 }
-header div img{
-    /*border: 2px solid yellowgreen; Test*/
-    width: 4rem;
-    height: 100%;
-    margin: 0.6rem 0.6rem 0 0.6rem;
-    
+header div img{  
+    float: left;
+    width: 6rem;
+    height: 100%; 
 }
 header div h1{    
-    font-size: 1.5rem;
-}
-header nav{
-    /*border: 2px solid blanchedalmond; Test*/
-    grid-area: menue;    
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-header nav a{
-    display: block;
-    margin: 0.5rem;
-    padding: 0.6rem;
-    font-size: 1.4rem;
-    color: rgb(49, 49, 45);
-    box-shadow: 0 0.1rem 0.3rem rgba(255, 255, 255, 1),
-                0.1rem 0 0 rgba(255, 255, 255, 1);
-}
-header nav a:hover{
-    box-shadow: 0 0.1rem 0.1rem rgba(255, 255, 255, 0.4),
-                0.1rem 0.1rem 0 rgba(255, 255, 255, 0.3);
+    font-size: 2rem;
 }
