--- a/styles/viewStyles/index.css
+++ b/styles/viewStyles/index.css
@@ -28,7 +28,7 @@ main{
 }
 .txt{
     font-size: 1.3rem;    
-    padding: .3rem;
+    padding: 0.3rem;
     /*visibility: hidden;*/
     display: none;
 }
