--- a/styles/viewStyles/index.css
+++ b/styles/viewStyles/index.css
@@ -1,81 +1,108 @@
-main{
-    display: grid;
-    grid-gap: 0.8rem;
-    grid-template-columns: 1fr;
-    width: 97%;
-    margin: 0.5rem auto 0.5rem auto;
-}
-
-.art{    
-    color: black;
-    background-color: #eee;
-    box-shadow: 0 0.3rem 0.2rem rgba(0,0,0,0.4), 0.2rem 0 0 rgba(0,0,0,0.3);
-    border-radius: .1rem;    
-}
-
-.titel {
-    margin: 0.5rem;
-    padding: 0.5rem;
-    background-color: #666;
-    text-align: center;
-}
-.art a h2{    
-    font-size: 1.8rem;
-}
-.klappen:focus p{
-    /*visibility: visible; */
-    display: block;    
-}
-.txt{
-    font-size: 1.3rem;    
-    padding: 0.3rem;
-    /*visibility: hidden;*/
-    display: none;
-}
-
-.art {
+main{   
     position: relative;
-    border: 1px solid #ddd;
+    margin-top: 150px;
+    width: 97%;
+    margin: 0.8rem auto 0.5rem auto;
+    color: #2c3e50;
 }
- 
-/* Ausblenden des input-Feldes */
-.art input {
+
+/*Vorwort Style*/
+.vorwort{
+    padding: 0 0.3rem 0 0.3rem;
+}
+.vorwort title{
+    background-color: #c79af1;
+    color: #000044;
+    font-size: 1.8rem;
+    padding: 0.5rem;
+    display:block;
+    border-radius: 0.3rem;    
+}
+.vorwort p{
+    margin: 0.3rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #000044;
+}
+
+
+/* Acordeon styles */
+.tab {
+    position: relative;
+    margin-bottom: 0.5rem;
+    width: 100%;
+    color: #f1a80b;
+    overflow: hidden;
+  }
+  input {
     position: absolute;
-    left: -99999px;
-}
- 
-/* Gestaltung der labels */
-.art label {
-    display: block;
-    background: #68B022;
-    color: #fff;
-    padding: .4em;
-    text-align: center;
-    cursor: pointer;
-}
- 
-.art label:hover {
-    background: #ddd;
-}
- 
-/* Der Aufklappmechanismus */
-.art input:not(:checked) + div {
     opacity: 0;
-    height: 0;
-}
- 
-.art input:checked + div {
-    opacity: 1;
-    padding: .8em;
-    -webkit-transition: opacity 1s ease-in-out;
-    -moz-transition: opacity 1s ease-in-out;
-    -ms-transition: opacity 1s ease-in-out;
-    -o-transition: opacity 1s ease-in-out;
-    transition: opacity 1s ease-in-out;
-}
- 
-/* Steuerung der Sichtbarkeit der labels */
-.art input:not(:checked) + .close,
-.art input:checked + .open {
-    display: none;
-}
+    z-index: -1;
+  }
+  label {
+    position: relative;
+    display: block;
+    padding: 0 0 0 1em;
+    background: #3d0570;
+    font-weight: bold;
+    line-height: 3;
+    cursor: pointer;
+  }
+  .tab-content {
+    max-height: 0;
+    overflow: hidden;
+    background: #e0caec;
+    color: #000044;
+    -webkit-transition: max-height .35s;
+    -o-transition: max-height .35s;
+    transition: max-height .35s;
+  }
+  .tab-content p {
+    margin: 1em;
+  }
+  .tab-content a {
+      display:block;
+      text-align: center;
+      margin: 0 auto 0.3rem auto;
+      font-size: 1.2rem;      
+      border: solid 1px rgba(0, 0, 68, 0.4);
+      padding: 0.3rem 0 0.3rem 0;
+  }
+  .tab-content a:before{
+    
+    content: "\25b2";
+    margin-right: 0.3rem;
+  }
+  .tab-content a:after{
+    content: "\25b2";
+    margin-left: 0.3rem
+  }
+  /* :checked */
+  input:checked ~ .tab-content {
+    max-height: 10em;
+  }
+  /* Icon */
+  label::after {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    width: 3em;
+    height: 3em;
+    line-height: 3;
+    text-align: center;
+    -webkit-transition: all .35s;
+    -o-transition: all .35s;
+    transition: all .35s;
+  }
+  input[type=checkbox] + label::after {
+    content: "+";
+  }
+  input[type=radio] + label::after {
+    content: "\25BC";
+  }
+  input[type=checkbox]:checked + label::after {
+    transform: rotate(315deg);
+  }
+  input[type=radio]:checked + label::after {
+    transform: rotateX(180deg);
+  }
