--- a/styles/style.css
+++ b/styles/style.css
@@ -23,3 +23,15 @@ a{
 p{
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+quote {
+	color:rgb(74, 7, 129);
+	font-style: italic;
+}
+.abib{
+	text-decoration: none;
+	font-weight: bold;
+	color: rgb(231, 221, 240);
+	background-color: rgb(74, 7, 129);
+	padding: .2rem;
+	cursor: pointer;
+}
