--- a/styles/viewStyles/index.css
+++ b/styles/viewStyles/index.css
@@ -15,6 +15,7 @@ main{
     color: #000044;
     font-size: 1.8rem;
     padding: 0.5rem;
+    margin-bottom: .6rem;
     display:block;
     border-radius: 0.3rem;    
 }
@@ -23,6 +24,7 @@ main{
     font-size: 1.4rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #000044;
+    line-height: 1.8rem;
 }
 
 
@@ -53,34 +55,38 @@ main{
     max-height: 0;
     overflow: hidden;
     background: #e0caec;
-    color: #000044;
+    color: #000044;    
     -webkit-transition: max-height .35s;
     -o-transition: max-height .35s;
-    transition: max-height .35s;
+    transition: max-height .35s;    
   }
   .tab-content p {
-    margin: 1em;
+    margin: 1em;   
+    text-align: justify;
+    line-height: 1.8rem;
   }
-  .tab-content a {
-     display:block;
+  .tab-content a.home {
+      display:block;
       text-align: center;
-      margin: 0 auto 0.5rem auto;
+      margin: 0 .5rem 0.5rem .5rem;
       font-size: 1.6rem;      
       border: solid 1px rgba(0, 0, 68, 0.4);
       padding: 0.3rem 0 0.3rem 0;
+      font-weight: bold;
+	    color: rgb(74, 7, 129);
+	    background-color: rgb(231, 221, 240);
   }
-  .tab-content a:before{
-    
+  .tab-content a.home:before{    
     content: "\25b2";
     margin-right: 0.3rem;
   }
-  .tab-content a:after{
+  .tab-content a.home:after{
     content: "\25b2";
     margin-left: 0.3rem
   }
   /* :checked */
   input:checked ~ .tab-content {
-    max-height: 100%;
+    max-height: 100rem;
   }
   /* Icon */
   label::after {
@@ -96,9 +102,9 @@ main{
     -o-transition: all .35s;
     transition: all .35s;
   }
- input[type=radio] + label::after {
+ input[type=radio] ~ label::after {
     content: "\25BC";
   }
-  input[type=radio]:checked + label::after {
+  input[type=radio]:checked ~ label::after {
     transform: rotateX(180deg);
   }
