--- a/styles/resete.css
+++ b/styles/resete.css
@@ -21,6 +21,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 10px;
 	font: inherit;
+	font-family: sans-serif;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
