--- a/styles/style.css
+++ b/styles/style.css
@@ -10,28 +10,26 @@
 }
 html, body{	
 	background-color: #eee;
-	color: #444;
-	font-size:10px;
+	color: #444;	
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 h1, h2, h3, h4{	
 	color: rgb(245, 170, 8);
 	font-family: sans-serif;
 }
+h3{
+	font-size: 1.6rem;
+}
 a{
 	text-decoration: none;
+	font-weight: bold;
+	color: rgb(23, 2, 41);
 }
-p{
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-quote {
+
+.bib {	
 	color:rgb(74, 7, 129);
 	font-style: italic;
 }
-.abib{
-	text-decoration: none;
-	font-weight: bold;
-	color: rgb(231, 221, 240);
-	background-color: rgb(74, 7, 129);
-	padding: .2rem;
-	cursor: pointer;
+.abib{	
+	
 }
