--- a/styles/viewStyles/index.css
+++ b/styles/viewStyles/index.css
@@ -111,7 +111,7 @@ label {
   margin: 1rem;
   text-align: justify;
   line-height: 1.8rem;
-  color: red;
+  color:#000044;
 }
 
 .tab-content a.home {
