--- a/styles/viewStyles/index.css
+++ b/styles/viewStyles/index.css
@@ -14,11 +14,12 @@ main {
 }
 
 /*Vorwort Style*/
-
+.vorwort{
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+}
 .vorwort .tab {
   padding: 0 0.3rem 0.3rem 0.3rem;
-  font-size: 1.4rem;
-  line-height: 1.6rem;
 }
 
 .vorwortTitel {
@@ -43,6 +44,7 @@ main {
 .vorwort div.td {
   display: table-cell;
   padding: 0.5rem;
+  font-size: 1.2rem;
   border-bottom: 1px solid rgb(74, 7, 129);
 }
 
@@ -50,8 +52,17 @@ main {
   font-weight: bolder;
 }
 
-.vorwort a img {
+.vorwortImg>span{
+  line-height: 3rem;
+}
+.vorwortImg a{ 
+  display:block;
   height: 3rem;
+  float: right;
+  margin-right:2.5rem;
+}
+.vorwortImg a>img {
+  height: 3rem;  
 }
 
 /* Acordeon styles */
