--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,19 +1,30 @@
 footer{
-    height: 5rem;
-    width: 100vw;
-    background-color: rgb(54, 6, 99);
-    color: rgb(255,255,255);
-    padding: .2rem;
-    font-size: 1.2rem;
+    
+        /*border: 2px solid yellow; Test*/
+        background-color: #000044;
+        border-top-left-radius: 4rem;
+        box-shadow: -0.3rem -0.3rem 1rem 0 rgb(192, 165, 46);
+        margin: 0.6rem auto 0.6rem auto;
+        height: 6rem;
+        width: 95vw;
+        text-align: center;
 }
 footer nav{    
     width: 100%;
-    background-color: azure;
+    margin-top: .5rem;
+    display:flex;
+    justify-content: space-around;
 }
-footer nav a{
+footer>nav>a{
     display:block;
     color: orange;
     font-size: 1.6rem;
-    margin: .3rem auto .3rem auto;
+    margin-top: 1.6rem;
+    text-align: center;
     float: left;
+}
+footer>p{
+    color: rgb(255, 255, 255);
+    font-size: 1.4rem;
+    margin-top: 1.2rem
 }
