--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,28 +1,30 @@
 footer{
-    height: 5rem;
-    width: 95vw;
-    background-color: rgb(54, 6, 99);
-    color: rgb(255,255,255);    
-    font-size: 1.2rem;
-    margin: 0 auto;
+    
+        /*border: 2px solid yellow; Test*/
+        background-color: #000044;
+        border-top-left-radius: 4rem;
+        box-shadow: -0.3rem -0.3rem 1rem 0 rgb(192, 165, 46);
+        margin: 0.6rem auto 0.6rem auto;
+        height: 6rem;
+        width: 95vw;
+        text-align: center;
 }
 footer nav{    
-    width: 100%; 
+    width: 100%;
+    margin-top: .5rem;
+    display:flex;
+    justify-content: space-around;
 }
-.navFooter>ul>li{
-    display: inline-block;
-    margin: .2rem;
-}
-.navFooter>ul>li>a{    
+footer>nav>a{
+    display:block;
     color: orange;
-    font-size: 1.6rem;    
-    padding: .2rem;
-    width: 25%;
-    background-color: aliceblue;
-} 
+    font-size: 1.6rem;
+    margin-top: 1.6rem;
+    text-align: center;
+    float: left;
+}
 footer>p{
-    margin-top: 1.8rem;
-
-    font-size: 1.1rem;
-    float: right;
+    color: rgb(255, 255, 255);
+    font-size: 1.4rem;
+    margin-top: 1.2rem
 }
